--- a/Pipfile
+++ b/Pipfile
@@ -21,6 +21,13 @@ psycopg2 = "==2.9.3"
 flake8 = "==4.0.1"
 black = "==21.12b0"
 isort = "==5.9.3"
+redis = "==4.1.0"
+celery = "==5.2.3"
+flower = "==1.0.0"
+django-celery-email = "==3.0.0"
+argh = "==0.26.2"
+pyyaml = "==6.0"
+watchdog = "==2.1.6"
 
 [dev-packages]
 
