docker compose and makefile setup

--- a/local.yml
+++ b/local.yml
@@ -19,7 +19,7 @@ services:
         depends_on:
             - postgres
             - mailhog
-            - redis
+#            - redis
         networks:
             - authors-api-live
 
@@ -44,63 +44,63 @@ services:
         networks:
             - authors-api-live
 
-    redis:
-        image: redis:6-alpine
-        container_name: redis
-        networks:
-            - authors-api-live
-
-    celery_worker:
-        build:
-            context: .
-            dockerfile: ./docker/local/django/Dockerfile
-        command: /start-celeryworker
-        container_name: celery_worker
-        volumes:
-            - .:/app
-        env_file:
-            - ./.envs/.local/.django
-            - ./.envs/.local/.postgres
-        depends_on:
-            - redis
-            - postgres
-            - mailhog
-        networks:
-            - authors-api-live
-
-    flower:
-        build:
-            context: .
-            dockerfile: ./docker/local/django/Dockerfile
-        command: /start-flower
-        container_name: flower
-        volumes:
-            - .:/app
-        env_file:
-            - ./.envs/.local/.django
-            - ./.envs/.local/.postgres
-        ports:
-            - "5555:5555"
-        depends_on:
-            - redis
-            - postgres
-        networks:
-            - authors-api-live
-
-    nginx:
-        restart: always
-        depends_on:
-            - api
-        volumes:
-            - static_volume:/app/staticfiles
-            - media_volume:/app/mediafiles
-        build:
-            context: ./docker/local/nginx
-            dockerfile: Dockerfile
-        ports:
-            - "8080:80"
-        networks:
-            - authors-api-live
+#    redis:
+#        image: redis:6-alpine
+#        container_name: redis
+#        networks:
+#            - authors-api-live
+#
+#    celery_worker:
+#        build:
+#            context: .
+#            dockerfile: ./docker/local/django/Dockerfile
+#        command: /start-celeryworker
+#        container_name: celery_worker
+#        volumes:
+#            - .:/app
+#        env_file:
+#            - ./.envs/.local/.django
+#            - ./.envs/.local/.postgres
+#        depends_on:
+#            - redis
+#            - postgres
+#            - mailhog
+#        networks:
+#            - authors-api-live
+#
+#    flower:
+#        build:
+#            context: .
+#            dockerfile: ./docker/local/django/Dockerfile
+#        command: /start-flower
+#        container_name: flower
+#        volumes:
+#            - .:/app
+#        env_file:
+#            - ./.envs/.local/.django
+#            - ./.envs/.local/.postgres
+#        ports:
+#            - "5555:5555"
+#        depends_on:
+#            - redis
+#            - postgres
+#        networks:
+#            - authors-api-live
+#
+#    nginx:
+#        restart: always
+#        depends_on:
+#            - api
+#        volumes:
+#            - static_volume:/app/staticfiles
+#            - media_volume:/app/mediafiles
+#        build:
+#            context: ./docker/local/nginx
+#            dockerfile: Dockerfile
+#        ports:
+#            - "8080:80"
+#        networks:
+#            - authors-api-live
 
 networks:
     authors-api-live:
